Side menu on an Exercise Page should be full width on mobile devices (https://github.com/FrontEnd-ro/frontend.ro/issues/424)

--- a/client/components/layout/PageWithAsideMenu/PageWithAsideMenu.module.scss
+++ b/client/components/layout/PageWithAsideMenu/PageWithAsideMenu.module.scss
@@ -45,4 +45,11 @@
       top: 3.3em;
     }
   }
+
+  @media screen and (max-width: 600px) {
+    .aside-menu {
+      left: -100%;
+      width: 100%;
+    }
+  }
 }
